demo/src/main/java/com/example/towerdefense/application/errors/ValidationException.java
package com.example.towerdefense.application.errors;

public class ValidationException extends DomainException {
    public ValidationException(String code, String message) {
        super(422, code, message);
    }
}
